Bugfix data uris (#254)
* Prefer URIs over URLs for most of the flow as they are more versatile.

* Updated CHANGELOG

* Fixed CHANGELOG

* Surround each 'resolve' call with try/catch.

That's to prevent crash and log the error for better understanding.